# nicla-sense-me-fw

./: .codespellrc  .gitignore  DistTasks.yml  README.md  Taskfile.yml  codespellrc  gon.config.hcl  main.cpp  pyproject.toml
.github/: check-license.yml
.github/workflows/: build.yml  check-arduino.yml  check-license.yml  compile-examples.yml  release-go-task.yml  report-size-deltas.yml  spell-check-task.yml  sync-labels.yml  update-libraries.yml
ArduinoBLE_DFU/: ArduinoBLE_DFU.ino
Arduino_BHY2/: README.md  library.properties
Arduino_BHY2/docs/: README.md  readme.md
Arduino_BHY2/src/: Arduino_BHY2.cpp  Arduino_BHY2.h  BLEHandler.cpp  BLEHandler.h  BoschParser.cpp  BoschParser.h  BoschSensortec.cpp  BoschSensortec.h  DFUChannel.cpp  DFUChannel.h  DFUManager.cpp  DFUManager.h  DataParser.cpp  DataParser.h  EslovHandler.cpp  EslovHandler.h  SPIChannel.cpp  SPIChannel.h  SensorChannel.h  SensorTypes.h
Arduino_BHY2Host/: README.md  library.properties
Arduino_BHY2Host/docs/: readme.md
Arduino_BHY2Host/src/: Arduino_BHY2Host.cpp  Arduino_BHY2Host.h  BLEHandler.cpp  BLEHandler.h  EslovHandler.cpp  EslovHandler.h
Arduino_BHY2_HOST/: library.properties
Arduino_BHY2_HOST/src/: Arduino_BHY2_HOST.cpp  Arduino_BHY2_HOST.h  BLEHandler.cpp  BLEHandler.h  DFUTypes.h  DataParser.cpp  DataParser.h  EslovHandler.cpp  EslovHandler.h  SensorTypes.h
ESLOV/master/: master.ino
app/: SmartSensor.h  app.ino
bootloader/: bhy_upload.h  led_driver.cpp  main.cpp  mbed-os.lib  mbed_app.json
extras/: CRC8.py
spif_upload_bhy_firmware/: fw.h  spif_upload_bhy_firmware.ino
(+233 files in other folders)
